# autograd

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  asv.conf.json  environment-dev.yml  license.txt  notes.md  noxfile.py  pyproject.toml  setup.cfg  setup.py  tox.ini  version.py
.conda/: bld.bat  build.sh  meta.yaml
.github/: dependabot.yml
.github/workflows/: check.yml  publish.yml  test.yml  tsan.yml  zizmor.yml
autograd/: __init__.py  basic_ops.py  builtins.py  container_types.py  convenience_wrappers.py  core.py  differential_operators.py  errors.py  extend.py  fmap_util.py  grads.py  misc.py  node_types.py  optimizers.py  reverse_mode.py  test_util.py  tjp.py  tracer.py  trampoline.py  util.py  vspace.py  wrap_util.py
autograd/cupy/: __init__.py  autograd_util.py  cupy_boxes.py  cupy_extra.py  cupy_grads.py  cupy_jvps.py  cupy_vjps.py  cupy_vspaces.py  cupy_wrapper.py  fft.py  linalg.py  random.py
autograd/cupy/sparse/: __init__.py  sparse_boxes.py  sparse_jvps.py  sparse_vjps.py  sparse_vspaces.py  sparse_wrapper.py
autograd/misc/: __init__.py  fixed_points.py  flatten.py  optimizers.py  tracers.py
autograd/numpy/: __init__.py  complex_array_node.py  fft.py  gpu_array_node.py  linalg.py  linalg_extra.pyx  numpy.py  numpy_boxes.py  numpy_core.py  numpy_extra.py  numpy_grads.py  numpy_grads_interp.py  numpy_interp.py  numpy_jvps.py  numpy_tjps.py  numpy_vjps.py  numpy_vspaces.py  numpy_wrapper.py  random.py  use_gpu_numpy.py  util.py
autograd/numpy/compat/: __init__.py
autograd/numpy/lib/: __init__.py  arraypad.py
autograd/scipy/: __init__.py  integrate.py  linalg.py  misc.py  signal.py  special.py
autograd/scipy/stats/: __init__.py  beta.py  chi2.py  dirichlet.py  gamma.py  multivariate_normal.py  norm.py  poisson.py  t.py
benchmarks/: asv.conf.json.sample  bench_core.py  bench_mem.py  bench_numpy_vjps.py  bench_rnn.py  bench_util.py  benchmarks.py
conda_recipe/: conda.yaml
docs/: features_and_gotchas.md  tutorial.md  updateguide.md
examples/: 0_rosenbrock.py  0_sinusoid.py  0_tanh.py  1_logistic_regression.py  1_neural_net.py  3_optimizers.py  README.md  __init__.py  bayesian_neural_net.py  bayesian_optimization.py  black_box_svi.py  convnet.py  data.py  data_mnist.py  deep_gaussian_process.py  define_gradient.py  dot_graph.py  fixed_points.py  fluidsim.py  gaussian_process.py  generative_adversarial_net.py  gmm.py  gplvm.py  gpu_neural_net.py  hmm_em.py  ica.py  kfac_battle.py  kfac_pre.py  logistic_regression.py  lstm.py  minimize_nonlinear_constraint.py  mixture_variational_inference.py  natural_gradient_black_box_svi.py  negative_binomial_maxlike.py  neural_net.py  neural_net_regression.py  ode_net.py  optimizer_convergence.py  optimizers.py  print_trace.py  (+6 more)
examples/fluidsim/: animated.fig  fluidsim.py  wing.py
funkyyak/: __init__.py  core.py  grads.py  node_types.py  tests.py
scheme/: README.md  core.py  primitives.py  tests.py
scripts/: numpy_namespace.py
tests/: _test_complexity.py  benchmark_rnn.py  check_examples_run.sh  conftest.py  numpy_utils.py  profiling.py  test_binary_ops.py  test_builtins.py  test_complex.py  test_complexity.py  test_core.py  test_cupy.py  test_cupy_hack.py  test_cupy_sparse.py  test_dict.py  test_direct.py  test_fft.py  test_flatten.py  test_fmap.py  test_forward.py  test_gpu.py  test_graphs.py  test_jacobian.py  test_jvps.py  test_linalg.py  test_list.py  test_logic.py  test_misc.py  test_numpy.py  test_numpy_interp.py  test_numpy_like.py  test_performance.py  test_primitives.py  test_scalar_ops.py  test_scipy.py  test_systematic.py  test_tests.py  test_thread_safety.py  test_tjps.py  test_truediv.py  (+5 more)
