[metadata]
name = autograd
version = 1.2
author = Dougal Maclaurin and David Duvenaud and Matthew Johnson
author_email = maclaurin@physics.harvard.edu, duvenaud@cs.toronto.edu, mattjj@csail.mit.edu
license = MIT
license_file = license.txt
description = Efficiently computes derivatives of numpy code.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    Automatic differentiation
    backpropagation
    gradients
    machine learning
    optimization
    neural networks
    Python
    Numpy
    Scipy
url = https://github.com/HIPS/autograd
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5

[options]
packages =
    autograd
    autograd.numpy
    autograd.scipy
    autograd.scipy.stats
    autograd.misc
install_requires = numpy>=1.12; future>=0.15.2
setup_requires = setuptools; setuptools_scm
